# dbt-assignment-grader

./: ARCHITECTURE.md  LICENSE  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml
grader/: checks.py  main.py
grader/levels/: level_01.yml
