[project]
name = "dbt-assignment-grader"
version = "1.0.0"
description = "Static dbt assignment auto-grader — GitHub Action"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
]

[project.scripts]
grade = "grader.main:main"

[tool.setuptools.packages.find]
include = ["grader*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
